--- a/smartbrain/package.json
+++ b/smartbrain/package.json
@@ -12,6 +12,7 @@
 		"react-scripts": "^4.0.3",
 		"react-tsparticles": "^2.1.3",
 		"tachyons": "^4.12.0",
+		"tsparticles": "^2.1.3",
 		"web-vitals": "^2.1.4"
 	},
 	"scripts": {
